# bazel-angular-samples

./: .gitignore  BUILD.bazel  Dockerfile  WORKSPACE  angular.tsconfig.json  bazel-angular-2-samples  bazel-bin  bazel-genfiles  bazel-out  bazel-testlogs  bs-config.js  concat.js  docker-compose.yml  index-dev.html  index-prod.html  index.html  package-lock.json  package.json  readme  readme.md  rollup.config.js  router_state.d.ts  systemjs-config.js  systemjs-route-loader.js  tsconfig.json  webpack.config.js
caching/: Dockerfile  docker-compose.yml
src/apps/demo/: BUILD.bazel  app.component.ts  app.module.ts  app.routes.ts  bundle.bzl  dev-bundle.bzl  es6.bzl  feature.modules.ts  index.html  main.ts  rollup.bzl  webpack.bzl
src/apps/demo/airplane/: BUILD.bazel  app.component.ts  app.module.ts  app.routes.ts  route-definitions.ts
src/apps/demo/airplane/team0/: BUILD.bazel
src/apps/demo/airplane/team0/mod1/: BUILD.bazel
src/apps/demo/airplane/team0/mod3/: BUILD.bazel
src/apps/demo/airplane/team0/mod6/: BUILD.bazel
src/apps/demo/airplane/team1/: BUILD.bazel
src/apps/demo/airplane/team1/mod0/: BUILD.bazel
src/apps/demo/airplane/team1/mod2/: BUILD.bazel
src/apps/demo/airplane/team1/mod5/: BUILD.bazel
src/apps/demo/airplane/team1/mod6/: BUILD.bazel
src/apps/demo/airplane/team2/: BUILD.bazel
src/apps/demo/airplane/team2/mod7/: BUILD.bazel
src/apps/demo/airplane/team3/: BUILD.bazel
src/apps/demo/airplane/team3/mod1/: BUILD.bazel
src/apps/demo/airplane/team3/mod2/: BUILD.bazel
src/apps/demo/airplane/team3/mod7/: BUILD.bazel
src/apps/demo/airplane/team4/: BUILD.bazel
src/apps/demo/airplane/team4/mod1/: BUILD.bazel
src/apps/demo/airplane/team4/mod9/: BUILD.bazel
src/apps/demo/airplane/team5/: BUILD.bazel
src/apps/demo/airplane/team5/mod9/: BUILD.bazel
src/apps/demo/airplane/team6/: BUILD.bazel
src/apps/demo/airplane/team6/mod4/: BUILD.bazel
src/apps/demo/airplane/team7/: BUILD.bazel
src/apps/demo/airplane/team7/mod3/: BUILD.bazel
src/apps/demo/airplane/team7/mod8/: BUILD.bazel
src/apps/demo/airplane/team8/: BUILD.bazel
src/apps/demo/airplane/team8/mod0/: BUILD.bazel
src/apps/demo/airplane/team8/mod1/: BUILD.bazel
src/apps/demo/airplane/team8/mod2/: BUILD.bazel
src/apps/demo/airplane/team8/mod3/: BUILD.bazel
src/apps/demo/airplane/team8/mod4/: BUILD.bazel
src/apps/demo/airplane/team8/mod5/: BUILD.bazel
src/apps/demo/airplane/team8/mod6/: BUILD.bazel
src/apps/demo/airplane/team8/mod7/: BUILD.bazel
src/apps/demo/airplane/team8/mod8/: BUILD.bazel
src/apps/demo/airplane/team8/mod9/: BUILD.bazel
src/apps/demo/airplane/team9/: BUILD.bazel
src/apps/demo/airplane/team9/mod0/: BUILD.bazel
src/apps/demo/airplane/team9/mod4/: BUILD.bazel
src/apps/demo/airplane/team9/mod5/: BUILD.bazel
src/apps/demo/airplane/team9/mod8/: BUILD.bazel
src/apps/demo/rollup/: bundle.bzl  rollup.bzl
src/apps/demo/shared/: BUILD.bazel  logo.ts
src/apps/demo/shared-components/about/: BUILD.bazel
src/apps/demo/shared-components/access-child-components/: BUILD.bazel
src/apps/demo/shared-components/address-form/: BUILD.bazel  address-form.module.ts
src/apps/demo/shared-components/algorithms/: BUILD.bazel  algorithms.module.ts  insertion-sort.ts
src/apps/demo/shared-components/algorithms/graph/: edge-service.ts
src/apps/demo/shared-components/bound-textbox/: BUILD.bazel
src/apps/demo/shared-components/change-detection/: BUILD.bazel  change-detection.module.ts
src/apps/demo/shared-components/contact-list/: BUILD.bazel  contact-list.module.ts
src/apps/demo/shared-components/demo-page/: BUILD.bazel  demo-page.module.ts  demo-page.ts
src/apps/demo/shared-components/dependency-injection/: BUILD.bazel  address-book-service.ts  address-book.module.ts
src/apps/demo/shared-components/grid/: BUILD.bazel  grid-demo.ts  grid.module.ts
src/apps/demo/shared-components/http/: BUILD.bazel  http.sample.module.ts  http.ts
src/apps/demo/shared-components/input-controls/: BUILD.bazel  input-controls.module.ts
src/apps/demo/shared-components/input-output/: BUILD.bazel  input-output.module.ts
src/apps/demo/shared-components/jquery-integration/: BUILD.bazel  jquery-integration.module.ts  jquery-integration.ts
src/apps/demo/shared-components/lazy-loaded-tree-view/: BUILD.bazel  lazy-loaded-tree-view.module.ts
src/apps/demo/shared-components/lazy-loaded-tree-view/redux/: store.ts
src/apps/demo/shared-components/log-tail/: BUILD.bazel  log-tail-service.ts  log-tail.module.ts
src/apps/demo/shared-components/pub-sub/: BUILD.bazel  pub-sub.module.ts
src/apps/demo/shared-components/react-integration/: BUILD.bazel  react-integration.module.ts
src/apps/demo/shared-components/rxjs-buffering/: BUILD.bazel  rxjs-buffering.module.ts  rxjs-buffering.ts
src/apps/demo/shared-components/rxjs-caching/: BUILD.bazel  rxjs-caching.module.ts
src/apps/demo/shared-components/rxjs-error-handling/: BUILD.bazel  rxjs-error-handling.module.ts
src/apps/demo/shared-components/rxjs-streams/: BUILD.bazel  rxjs-streams.module.ts
src/apps/demo/shared-components/shared/: BUILD.bazel  shared.module.ts
src/apps/demo/shared-components/spreadsheet/: BUILD.bazel  column.ts  header-row-service.ts  key-map.ts  row.ts  spreadsheet.module.ts  spreadsheet.ts
src/apps/demo/shared-components/survey/: BUILD.bazel  survey.module.ts
src/apps/demo/shared-components/text-editor/: BUILD.bazel  text-editor.module.ts
src/apps/demo/shared-components/tree-view/: BUILD.bazel  tree-view-demo.ts  tree-view.module.ts
tools/: bazel.rc
