package(default_visibility = ["//visibility:public"])

exports_files(["rollup.config.js"])

filegroup(
    name = "node_modules",
    srcs = glob(["/".join([
        "node_modules",
        pkg,
        "**",
        ext,
    ]) for pkg in [
        "@angular",
        "tsickle",
        #"tsutils",
        "typescript",
        "@types",
    ] for ext in [
        "*.js",
        "*.json",
        "*.d.ts",
    ]] + [
        "node_modules/lite-server/**",
        "node_modules/rollup/**",
        "node_modules/connect-history-api-fallback/**"
    ])
)

filegroup(
    name = "bootstrap_files_shared",
    srcs = [
        "//:node_modules/zone.js/dist/zone.min.js",
        "//:tsconfig.json",
        "//:node_modules/systemjs/dist/system.js"
    ]
)

filegroup(
    name = "bootstrap_files_dev",
    srcs = [
        "//:index-dev.html",
        "//:systemjs-route-loader.js",
        "//:bootstrap_files_shared"
    ]
)

filegroup(
    name = "bootstrap_files_prod",
    srcs = [
        "//:index.html",
        "//:bootstrap_files_shared",
        "//:bs-config.js"
    ]
)
