package(default_visibility = ["//visibility:public"])

alias(
    name = "install",
    actual = "@yarn//:yarn",
)

exports_files(["rollup.config.js"])

filegroup(
    name = "node_modules",
    srcs = glob(["/".join([
        "node_modules",
        pkg,
        "**",
        ext,
    ]) for pkg in [
        "@angular",
        "tsickle",
        "@types",
    ] for ext in [
        "*.js",
        "*.json",
        "*.d.ts",
    ]] + [
        "node_modules/lite-server/**",
        "node_modules/rollup/**",
        "node_modules/typescript/**"
    ])
)

filegroup(
    name = "bootstrap_files_shared",
    srcs = [
        "//:node_modules/zone.js/dist/zone.min.js",
        "//:tsconfig.json",
        "//:node_modules/systemjs/dist/system.js"
    ]
)

filegroup(
    name = "bootstrap_files_prod",
    srcs = [
        "//:index.html",
        "//:bootstrap_files_shared"
    ]
)
