package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "node_modules_filegroup")


exports_files([
    "tsconfig.json",
    "rollup.config.js"
])

# Developers should always run `bazel run :install`
# This ensures that package.json in subdirectories get installed as well.
alias(
    name = "install",
    actual = "@yarn//:yarn",
)

node_modules_filegroup(
    name = "node_modules",
    packages = [
        "@angular/animations",
        "@angular/common",
        "@angular/core",
        "@angular/forms",
        "@angular/http",
        "@angular/platform-browser",
        "@angular/router",
        "bytebuffer",
        "hammerjs",
        "jasmine",
        "minimist",
        "protobufjs",
        "reflect-metadata",
        "source-map-support",
        "tsickle",
        "tslib",
        "tsutils",
        "typescript",
        "zone.js",
        "rollup",
        "lite-server",
        "@types",
        "@webcomponents/custom-elements",
    ],
)

filegroup(
    name = "web_test_bootstrap_scripts",
    # do not sort
    srcs = [
        "//:node_modules/reflect-metadata/Reflect.js",
        "//:node_modules/zone.js/dist/zone.js",
        "//:node_modules/zone.js/dist/zone-testing.js",
        "//:node_modules/zone.js/dist/task-tracking.js",
    ],
)

filegroup(
    name = "angularjs",
    # do not sort
    srcs = [
        "//:node_modules/angular/angular.js",
        "//:node_modules/angular-mocks/angular-mocks.js",
    ],
)


filegroup(
    name = "bootstrap_files_shared",
    srcs = [
        "//:node_modules/zone.js/dist/zone.min.js",
        "//:tsconfig.json",
        "//:node_modules/systemjs/dist/system.js"
    ]
)

filegroup(
    name = "bootstrap_files_prod",
    srcs = [
        "//:index.html",
        "//:bootstrap_files_shared"
    ]
)
