package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "demo",
    srcs = glob(["*.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = ["@rxjs", 
            "//src/apps/demo/airplane:airplane"
    ]
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

### PROD ###
load(":es6.bzl", "es6")

es6(
    name = "prod_source",
    deps = [":demo"],
)

nodejs_binary(
    name = "rollup",
    entry_point = "rollup/bin/rollup",
    data = [
        "//:bootstrap_files_prod",
        "//:rollup.config.js",
        ":prod_source"
    ]
)

nodejs_binary(
    name = "es5",
    entry_point = "typescript/bin/tsc"
)

nodejs_binary(
    name = "uglify",
    entry_point = "uglify-js/bin/uglifyjs"
)

load(":rollup.bzl", "rollup")

rollup(
    name = "prod",
    entry_point = "apps/demo/main.js"
)

nodejs_binary(
    name = "prod_web",
    entry_point = "lite-server/bin/lite-server",
    data = [
        "//:bootstrap_files_prod",
        ":prod"
    ],
    node_modules = "//:node_modules"
)

### DEV ###

nodejs_binary(
    name = "dev_web",
    entry_point = "lite-server/bin/lite-server",
    data = [
        "//:bootstrap_files_dev",
        ":prod_source"
    ]
)