package(default_visibility = ["//visibility:public"])
load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "demo",
    srcs = glob(["*.ts"]),
    tsconfig = ":tsconfig.json",
    deps = ["@rxjs", 
            "//src/apps/demo/shared-components/demo-page:demopage",
            "//src/apps/demo/shared-components/shared",
            "//src/apps/demo/shared-components/spreadsheet",
            "//src/apps/demo/shared-components/tree-view:treeview",
            "//src/apps/demo/shared-components/lazy-loaded-tree-view:lazytree",
            "//src/apps/demo/shared-components/text-editor:texteditor",
            "//src/apps/demo/shared-components/algorithms:graph",
            "//src/apps/demo/shared-components/rxjs-streams:rxjsstreams",
            "//src/apps/demo/shared-components/rxjs-buffering:rxjsbuffering",
            "//src/apps/demo/shared-components/pub-sub:pubsub",
            "//src/apps/demo/shared-components/grid:grid",
            "//src/apps/demo/shared-components/contact-list:contact",
            "//src/apps/demo/shared-components/bound-textbox:boundtextbox",
            "//src/apps/demo/shared-components/input-controls:inputcontrols",
            "//src/apps/demo/shared-components/input-output:inputoutput",
            "//src/apps/demo/shared-components/survey:survey",
            "//src/apps/demo/shared-components/address-form:addressform",
            "//src/apps/demo/shared-components/dependency-injection:addressbook",
            "//src/apps/demo/shared-components/access-child-components:accesschildcomponents",
            "//src/apps/demo/shared-components/change-detection:changedetection",
            "//src/apps/demo/shared-components/log-tail:logtail",
            "//src/apps/demo/shared-components/rxjs-error-handling:rxjserrorhandling",
            "//src/apps/demo/shared-components/http:http",
            "//src/apps/demo/shared-components/rxjs-caching:rxjscaching",
            "//src/apps/demo/shared-components/jquery-integration:jqueryintegration"
    ]
)

# Needed because the devserver only loads static files that appear under this
# package.
genrule(
    name = "zone.js",
    srcs = ["//:node_modules/zone.js/dist/zone.min.js"],
    outs = ["zone.min.js"],
    cmd = "cp $< $@",
)

genrule(
    name = "bootstrap",
    srcs = ["//:node_modules/bootstrap/dist/css/bootstrap.min.css"],
    outs = ["bootstrap.css"],
    cmd = "cp $< $@",
)

STATIC_FILES = [
    "index.html",
    ":zone.js",
    ":site.css",
    ":bootstrap"
]

ts_devserver(
    name = "devserver",
    entry_module = "demo/src/apps/demo/main",
    scripts = ["//:angular_bundles"],
    serving_path = "/bundle.min.js",
    static_files = STATIC_FILES,
    deps = [":demo"],
)
