package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "demo",
    srcs = glob(["*.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = ["@rxjs", 
            "//src/apps/demo/airplane:airplane"
    ]
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

### PROD ###

nodejs_binary(
    name = "rollup",
    entry_point = "rollup/bin/rollup",
    data = [
        "//:bootstrap_files_prod",
        "//:rollup.config.js"
    ]
)

load("//src/apps/demo/rollup:rollup.bzl", "rollup")

rollup(
    name = "prod",
    entry_point = "apps/demo/main",
    modules = [
                "apps/demo/airplane/team0/team0.module",
                "apps/demo/airplane/team1/team1.module",
                "apps/demo/airplane/team2/team2.module",
                "apps/demo/airplane/team3/team3.module",
                "apps/demo/airplane/team4/team4.module",
                "apps/demo/airplane/team5/team5.module",
                "apps/demo/airplane/team6/team6.module",
                "apps/demo/airplane/team7/team7.module",
                "apps/demo/airplane/team8/team8.module",
                "apps/demo/airplane/team9/team9.module"
    ],
    deps = [":demo"]
)

nodejs_binary(
    name = "prod_web",
    entry_point = "lite-server/bin/lite-server",
    data = [
        "//:bootstrap_files_prod",
        ":prod"
    ],
    node_modules = "//:node_modules"
)
