package(default_visibility = ["//visibility:public"])
#load("@karma//:index.bzl", "karma_test")
load("@angular//packages/bazel:index.bzl", "ng_module")

ng_module(
    name = "team3",
    srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
    deps = ["@rxjs", "//src/apps/demo/airplane/team3/mod0:mod0","//src/apps/demo/airplane/team3/mod1:mod1","//src/apps/demo/airplane/team3/mod2:mod2","//src/apps/demo/airplane/team3/mod3:mod3","//src/apps/demo/airplane/team3/mod4:mod4","//src/apps/demo/airplane/team3/mod5:mod5","//src/apps/demo/airplane/team3/mod6:mod6","//src/apps/demo/airplane/team3/mod7:mod7","//src/apps/demo/airplane/team3/mod8:mod8","//src/apps/demo/airplane/team3/mod9:mod9"],
    tsconfig = "//:tsconfig.json",
)
#karma_test(
#    name = "unit_tests",
#    deps = ["//src/apps/demo/airplane/team3/mod0:mod0",
#        "//src/apps/demo/airplane/team3/mod1:mod1",
#        "//src/apps/demo/airplane/team3/mod2:mod2",
#        "//src/apps/demo/airplane/team3/mod3:mod3",
#        "//src/apps/demo/airplane/team3/mod4:mod4",
#        "//src/apps/demo/airplane/team3/mod5:mod5",
#        "//src/apps/demo/airplane/team3/mod6:mod6",
#        "//src/apps/demo/airplane/team3/mod7:mod7",
#        "//src/apps/demo/airplane/team3/mod8:mod8",
#        "//src/apps/demo/airplane/team3/mod9:mod9",
#        # FIXME(alexeagle): doesn't belong here
#        "@karma//internal/karma_concat_js",
#    ],
#    tags = ["local"]
#)
      