package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "addressbook",
    srcs = glob(["*.ts"]),
    tsconfig = "//src/apps/demo:tsconfig.json",
    assets = ["//src/apps/demo/shared-components/dependency-injection:address-book.html"],
    deps = ["@rxjs",
            "//src/apps/demo/shared-components/shared"        
    ]
)