package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "http",
    srcs = glob(["*.ts"]),
    tsconfig = "//src/apps/demo:tsconfig.json",
    assets = ["//src/apps/demo/shared-components/http:http.html"
    ],
    deps = ["@rxjs",
            "//src/apps/demo/shared-components/shared"
    ]
)