package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "rxjscaching",
    srcs = glob(["*.ts"]),
    tsconfig = "//src/apps/demo:tsconfig.json",
    assets = ["//src/apps/demo/shared-components/rxjs-caching:caching-demo.html"
             ],
    deps = ["@rxjs",
            "//src/apps/demo/shared-components/shared"        
    ]
)